--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
         "@types/react": "16.8.4",
         "@types/react-dom": "16.8.2",
         "antd": "^3.15.0",
+        "antd-mobile": "^2.2.9",
         "axios": "^0.18.0",
         "babel-core": "7.0.0-bridge.0",
         "babel-eslint": "9.0.0",
